fix scrollbar
rajout de scrollbar pour que <p> dans card soit responsive + changement d'icônes et liens + écogites

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,7 +149,7 @@ footer p{
 .card {
     position: relative;
     background-color: #fff;
-    padding: 20px;
+    padding: 20px;;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -165,6 +165,14 @@ footer p{
     width: 100%;
     height: auto;
     transition: all 0.3s ease;
+}
+
+.card img {
+    transform: scale(1.1);
+}
+
+.card:hover img {
+    transform: scale(1);
 }
 
 .card-text {
@@ -186,4 +194,9 @@ footer p{
 
 .card-text p {
     margin-bottom: 0;
+}
+
+.card {
+    height: auto;
+    overflow: auto;
 }
